[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steris"
version = "0.1.0"
description = "Automatic PDF report generator for threat modeling activities"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
steris = "steris.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
